# irc-data

./: README.md  irc-data.cabal  rfc2812.cabal
skel/: skel.hs
spec/: Spec.hs
src/Data/: IRC.hs
src/Data/IRC/: Channel.hs  Hostname.hs  Nick.hs  Server.hs  Service.hs
tests/: Instances.hs  NickSpec.hs  ServerSpec.hs  Spec.hs  TestTypes.hs
