name:                irc-data
version:             0.1.0.0
synopsis:            Haskell library for parsing and formatting IRC data.
description:
  This is a Haskell library for parsing, abstracting, and formatting raw IRC
  messages, as specified in <https://tools.ietf.org/html/rfc1459 RFC 1459> and
  <https://tools.ietf.org/html/rfc2812 RFC 2812>.
  .
  This library does not actually talk to the IRC server. It just parses messages
  from it.
  .
  Usage:
  .
  > import Data.IRC
  .
  See the documentation for @Data.IRC@ for more details.
homepage:            https://github.com/pharpend/irc-data
bug-reports:         https://github.com/pharpend/irc-data/issues
license:             Apache-2.0
license-file:        LICENSE
author:              Peter Harpending
maintainer:          peter@harpending.org
copyright:           Copyright 2015 Peter Harpending
category:            Network
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  README.md
  LICENSE

source-repository head
  type:     git
  location: https://github.com/pharpend/rfc2812.git

source-repository this
  type:     git
  location: https://github.com/pharpend/rfc2812.git
  tag:      0.1.0.0

library
  hs-source-dirs:     src
  default-language:   Haskell98
  other-extensions:   
     CPP                               
     MultiWayIf
     OverloadedStrings                 
     Trustworthy                       
  ghc-options:        -Wall -fno-warn-unused-do-bind
  build-depends:
      attoparsec
    , base >=4.7 && <4.9
    , bytestring
    , unordered-containers
    , vector
  exposed-modules:
    Data.IRC
    Data.IRC.Nick
    Data.IRC.Server
  default-extensions:
    CPP
    MultiWayIf
    OverloadedStrings
    Trustworthy

test-suite tests
  build-depends:
      base >=4.7 && <4.9
    , bytestring
    , hspec
    , hspec-expectations
    , irc-data
    , QuickCheck
  default-extensions:
    CPP
    OverloadedStrings
  default-language:   Haskell2010
  ghc-options:        -Wall -threaded -fno-warn-orphans
  hs-source-dirs:     tests
  main-is:            Spec.hs
  other-modules:
    Instances
    ServerSpec
  type:               exitcode-stdio-1.0
